# schedulingmanager/src/main/resources/scalatra-webapp/swagger.json
@@ -13,6 +13,37 @@
     "application/json"
   ],
   "paths": {
+    "/workflow/{workflowId}/run": {
+      "post": {
+        "description": "Runs a workflow immediately, once, without creating a schedule.",
+        "operationId": "runWorkflowNow",
+        "parameters": [
+          {
+            "name": "workflowId",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "format": "uuid"
+          },
+          {
+            "name": "executionInfo",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/WorkflowExecutionInfo"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Workflow execution started.",
+            "schema": {
+              "$ref": "#/definitions/RunNowResponse"
+            }
+          }
+        }
+      }
+    },
     "/workflow/{workflowId}/schedules": {
       "get": {
         "description": "Returns list of schedules for a workflow.",
@@ -177,6 +208,21 @@
           "description": "Id of a preset which should be used to execute the workflow.",
           "type": "integer",
           "format": "int64"
+        }
+      }
+    },
+    "RunNowResponse": {
+      "description": "Acknowledgement of an immediate (run-now) workflow execution.",
+      "type": "object",
+      "required": ["status", "runId"],
+      "properties": {
+        "status": {
+          "type": "string"
+        },
+        "runId": {
+          "description": "Id of the cloned workflow that is being executed.",
+          "type": "string",
+          "format": "uuid"
         }
       }
     },
